# DL-backend

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  embedding.py  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  main.py
app/embedding/: kosolar.py
app/llm/: embedding.py  gemini.py  ingest_embeddings.py  prompt.py  search.py
app/models/: schema.py
app/routers/: chatbot.py
app/utils/: embedding.py  logger.py  pg_search.py  prompt.py  save_pgvector_test.py  save_to_pgvector.py
app/utils/data/대출/: 은행여신거래기본약관[가계용].txt
app/utils/data/예금/: iM스마트예금.txt  iM주거래우대예금(단골고객형).txt  iM주거래우대예금(첫만남고객형).txt  iM함께예금.txt  iM행복파트너예금(연금형).txt  iM행복파트너예금(일반형).txt  新사업자우대예금.txt  복리회전예금.txt  성실모범납세자우대예금(개인).txt  성실모범납세자우대예금(법인_단체).txt  양도성예금증서(CD).txt  자유만기회전예금.txt  자유적립식예금.txt  직장인우대예금.txt  친환경녹색예금.txt  파랑새정기예금.txt  표지어음.txt  플러스정기예금.txt  환매조건부채권(RP).txt  황금빛예금(연금형).txt  황금빛예금(일반형).txt
app/utils/data/적금/: iM스마트적금.txt  iM아동수당적금.txt  iM자유적금.txt  iM장병내일준비적금.txt  iM주거래우대적금(단골고객형).txt  iM주거래우대적금(첫만남고객형).txt  iM청년도약계좌.txt  iM함께적금.txt  iM핫플적금.txt  iM행복파트너적금.txt  iM희망더하기적금.txt  新사업자우대적금(자유적립식).txt  新사업자우대적금(정기적립식).txt  新사업자우대적금-자유적립식(법인,단체).txt  新사업자우대적금-정기적립식(법인,단체).txt  내가만든보너스적금.txt  내손안에적금.txt  마이(My)적금.txt  성실모범납세자우대적금(개인).txt  성실모범납세자우대적금(법인_단체).txt  세븐적금.txt  쓰담쓰담적금(자유적립식).txt  쓰담쓰담적금(정기적립식).txt  알찬여행적금(개인).txt  알찬여행적금(법인,단체).txt  알찬여행적금.txt  영플러스(Young Plus)적금.txt  주택청약종합저축.txt  직장인우대적금.txt  청년 주택드림 청약통장.txt  청춘희망적금.txt  친환경녹색적금.txt  파랑새부금.txt  파랑새적금.txt  평생저축(일반형).txt  황금빛적금.txt
app/vectorstore/: sample_store.py
(+36 files in other folders)
